# d2l-code

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  chapter10.py  chapter11.py  chapter12.py  chapter13.py  chapter14.py  chapter15.py  chapter3.py  chapter4.py  chapter5.py  chapter6.py  chapter7.py  chapter8.py  chapter9.py  colab_template.ipynb  houseprice.py  mini_d2l.py  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml
tests/: test_project_baseline.py
