[project]
name = "d2l-code"
version = "0.1.0"
description = "不依赖第三方 d2l 包的个人版《动手学深度学习》代码库"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "sad-and-bad1231" },
]
dependencies = [
    "torch",
    "torchvision",
    "matplotlib",
    "numpy",
    "pandas",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    "data",
    "__pycache__",
    ".ipynb_checkpoints",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
